assets/css/styles.css
/* ... */
.dark-vertion .mh-service .mh-service-item {
  -webkit-box-shadow: -1rem 0 3rem #000;
  box-shadow: -1rem 0 3rem #000;
}

.dark-vertion .mh-home .hero-img img {
  border: 20px solid rgba(0, 0, 0, 0.4);
}

.dark-vertion .mh-home .img-border {
  border: 20px solid rgba(0, 0, 0, 0.9);
}

.dark-vertion .candidatos .parcial .progressBar {
  background: rgba(199, 198, 198, 0.6);
}

.dark-vertion .mh-progress path:nth-child(1) {
  stroke: rgba(255, 255, 255, 0.5);
}

.dark-vertion.home-slider .mh-home .img-border {
  border-color: rgba(255, 255, 255, 0.52);
}

.dark-vertion.home-slider .mh-home .hero-img img {
  border-color: rgba(255, 255, 255, 0.4);
}

.home-slider .mh-home .img-border {
  border: 20px solid rgba(0, 0, 0, 0.52);
}

.home-slider .img-color-overlay {
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 9;
  position: relative;
}

.home-video .mh-home .img-border {
  border: 20px solid rgba(0, 0, 0, 0.52);
}

.mh-rtl {
  text-align: right;
}

.mh-rtl .mh-work .mh-experience-deatils
.mh-work-item .work-responsibility
li .fa {
  margin-left: 10px;
}

.mh-rtl .mh-blog-post-info ul li strong {
  margin-left: 6px;
}

.mh-rtl .mh-footer .form-control {
  text-align: right;
}

.mh-rtl .mh-footer .contact-message {
  text-align: right;
}

/*
    ==============
    Navigation
    ==============
*/
/*---------------------------------------------------------------------*/
/* Loader 
/*---------------------------------------------------------------------*/
.section-loader {
  position: fixed;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 100%;
  height: 100vh;
  z-index: 9999999;
}

.section-loader .loader {
  position: relative;
}

.section-loader .loader div {
  -webkit-box-sizing: content-box;
          box-sizing: content-box;
  position: absolute;
  border-width: 4px;
  border-style: solid;
  opacity: 1;
  border-radius: 50%;
  -webkit-animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
  animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}

.section-loader .loader div:nth-child(1) {
  border-color: #E91E63;
}

.section-loader .loader div:nth-child(2) {
  border-color: #0dbda1;
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}

.section-loader .loader {
  width: 200px !important;
  height: 200px !important;
  -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
  transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
}

@keyframes loader {
  0% {
    top: 94px;
    left: 94px;
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: 57px;
    left: 57px;
    width: 74px;
    height: 74px;
    opacity: 0;
  }
}

@-webkit-keyframes loader {
  0% {
    top: 94px;
    left: 94px;
    width: 0;
    height: 0;
    opacity: 1;
  }
  100% {
    top: 57px;
    left: 57px;
    width: 74px;
    height: 74px;
    opacity: 0;
  }
}

/*
    ==============
       Navigation
    ==============
*/
.mh-nav {
  width: 100%;
  
}

.mh-header {
  padding: 10px 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.mh-header.nav-strict {
  padding: 10px 0;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.mh-header .navbar-nav li {
  /* margin: 0 20px; */
  /* padding: 0 20px; */
  border-radius: 5px;
  transition: none;
  
}

.mh-header .navbar-nav li:hover {
  /* background: black; */
  /* transition: 0.3s ; */
}

.social-media-icon-footer {
  padding: 0 !important;

}

.social-media-icon-footer i {
  padding: 10px;
  transition: 0.2s;
  
}

.social-media-icon-footer i:hover {
  transform: scale(1.3) !important;
  transition: 0.3s;
}

.mh-header .navbar-nav li a {
  /* border-bottom: 1px solid transparent; */
  font-weight: bold;
  font-family: "roboto", sans-serif;
  font-size: 18px;
  opacity: 1;
  line-height: 30px;
  transition: none;
  padding-bottom: 0;
  
}

.mh-header .navbar-nav li a div {
  color: inherit;
  /* padding-bottom: 8px; */
}

.nav-link {
  padding-left: 0 !important;
  padding-right: 0 !important;
  position: relative;
  overflow: hidden;
  
}

.nav-link-container.active .nav-link{
  /* border-bottom: 1px solid black; */
}



.mh-header .navbar-nav li a.nav-link {
  
}

.mh-header .navbar-nav li a:hover {
  /* color: #0bceaf; */
  /* transition: none; */
  /* background: black; */
}

.mh-header .navbar-nav li a div:hover {
  /* color: #0bceaf; */
}

.nav-item {
  padding-left: 20px !important;
  padding-right: 20px !important;
}

.nav-item:hover {
  color: green;
}

.nav-3 .navbar-dark .navbar-nav .nav-link a {
  color: rgba(255, 255, 255, 0.7);
}

.nav-3 .navbar-dark .navbar-nav .nav-link.active a {
  color: rgba(255, 255, 255, 0.7);
}

.nav-3 .navbar-nav {
  padding-top: 30px;
}

.home-padding {
  padding: 104px 0 180px 0;
}

/*
    ==============
       Navigation
    ==============
*/
.mh-home-2 .mh-header-info {
  text-align: center;
  padding-top: 100px;
}

.mh-home-2 .mh-header-info .hero-img {
  margin-bottom: 30px;
}

.mh-home-2 .mh-header-info .hero-img img {
  border: 0px solid #fff;
  border-radius: 50%;
}

.mh-home-2 .mh-header-info h2 {
  font-size: 50px;
  font-weight: 600;
  line-height: 60px;
  margin-top: 10px;
  margin-bottom: 0px;
  opacity: 0.9;
}

.mh-home-2 .mh-header-info h4 {
  font-size: 18px;
  line-height: 30px;
  margin-bottom: 20px;
  opacity: 0.9;
}

.mh-home-2 .mh-header-info p {
  padding: 0 120px;
  font-weight: 300;
}

.mh-home-2 .mh-header-info ul li {
  margin: 10px 6px;
}

.mh-home-2 .mh-header-info ul.mh-home-contact {
  margin-bottom: 15px;
}

.mh-home-2 .mh-header-info ul.mh-home-contact li {
  display: inline-block;
  margin: 10px 15px;
}

.mh-home-2 .mh-header-info ul.mh-home-contact li .fa {
  margin-right: 10px;
}

.mh-home-2 .mh-header-info ul.mh-home-contact li:hover .fa {
  color: #0bceaf;
}
/* ... */

